# Client-Management-Software-UoS-AI-Soc

./: .coverage  .env  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .secrets.baseline  .trufflehog.yaml  API_DOCUMENTATION.md  AUTH_TESTING_GUIDE.md  CLAUDE.md  COMPLETED_FEATURES.md  CONTRIBUTING.md  DATABASE_SCHEMA.md  DETAILED_FEATURE_AUDIT.md  FASTAPI_DOCS_FIX.md  FEATURES_CHECKLIST.md  FRONTEND_AUTH_GUIDE.md  GIT_SETUP.md  IMPLEMENTATION_STATUS.md  MAINTENANCE_TAB_IMPROVEMENTS.md  PROPERTY_MANAGEMENT_STATUS.md  Project CRM Blueprint.md  Project CRM Blueprint.txt  QUICKSTART.md  QUICK_TEST.md  QUICK_WIN_RECOMMENDATIONS.md  README.md  ROLE_EXPLANATION.md  START_FRONTEND.md  TESTING_GUIDE.md  TESTING_PIPELINE.md  TEST_FRONTEND.md  TEST_MY_APPLICANTS.md  TEST_TRANSITION.md  TEST_WORKFLOW_API.md  api.py  blueprint_completion_analysis.txt  coverage.xml  main.py  notes.txt  (+18 more)
backend/: .env.example  .env.preview.example  Procfile  README.md  assign_agents.py  assign_applicants_to_user.py  assign_demo_to_test_user.py  assign_entities.py  assign_maintenance.py  assign_managed_by.py  assign_properties.py  assign_tasks.py  assign_to_me.py  clear_property_photos.py  coverage.xml  create_test_data.py  ensure_test_agent_data.py  find_and_generate_tasks.py  generate_my_tasks.py  get_organization_id.py  migrate_ai_calls.py  migrate_schema.py  mypy.ini  nixpacks.toml  pyproject.toml  pytest.ini  quick_test.py  railway.json  railway.toml  redistribute_to_user.py  requirements.txt  reset_database.py  ruff.toml  seed_data.py  test.db.backup.20251106_120532  test_my_applicants.py  test_workflow.py  utils.py  verify_assignments.py
backend/app/: __init__.py  main.py
backend/docs/: OBSERVABILITY.md  SECURITY.md
backend/mcp_server/: __init__.py  api_client.py  api_server.py  config.py  llm_service.py  mcp_host.py  requirements.txt
backend/mock_server/: mock_api.py
backend/scripts/: README.md  calculate_burn_rate.py  check-api-contract.sh  check_api_contract.py  check_module_coverage.py
backend/tests/: conftest.py  test_api_contract.py  (+10 more)
(+325 files in other folders)
