[project]
name = "client-management-backend"
version = "0.1.0"
description = "Client Management Software Backend API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "annotated-doc>=0.0.3",
    "fastapi>=0.120.4",
    "uvicorn>=0.38.0",
    "sqlalchemy>=2.0.44",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.2.1",
    "email-validator>=2.3.0",
    "httpx>=0.28.1",
    "faker>=37.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
]

