[project]
name = "client-management-backend"
version = "0.1.0"
description = "Client Management Software Backend API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "annotated-doc>=0.0.3",
    "fastapi>=0.120.4",
    "uvicorn>=0.38.0",
    "sqlalchemy>=2.0.44",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.2.1",
    "email-validator>=2.3.0",
    "httpx>=0.28.1",
    "faker>=37.12.0",
    "prometheus-client>=0.21.1",
    "psutil>=6.1.1",
    "slowapi>=0.1.9",
    "structlog>=25.2.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.1",
    "mypy>=1.15.0",
    "slowapi>=0.1.9",
    "structlog>=25.2.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.1",
    "mypy>=1.15.0",
    "slowapi>=0.1.9",
    "structlog>=25.2.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
]

